syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/publisher/update.proto";

service UpdatePublisherService {
  rpc updatePublisher(com.example.internalapi.request.publisher.update.proto.UpdatePublisherRequest)
      returns (com.example.internalapi.request.publisher.update.proto.UpdatePublisherResponse);
}
